Feat: adding multi link download from bookmarks